--- a/src/App.css
+++ b/src/App.css
@@ -17,13 +17,13 @@
 	background-color: rgb(0, 0, 0);
 }
 
-.page-content {
+.page_content {
 	background-color: white;
 	position: relative;
 }
 
-.page-content:before,
-.page-content:after {
+.page_content:before,
+.page_content:after {
 	content: "";
 	position: absolute;
 	top: 0;
@@ -33,17 +33,17 @@
 	border: 1px solid #f4f4f5;
 }
 
-.page-content:before {
+.page_content:before {
 	left: 0;
 	z-index: 1;
 }
 
-.page-content:after {
+.page_content:after {
 	right: 0;
 	z-index: 1;
 }
 
-.content-wrapper {
+.content_wrapper {
 	max-width: 1000px;
 	margin: 0 auto;
 }
@@ -56,7 +56,7 @@
 	width: 70%;
 }
 
-.subtitle {
+.sub {
 	padding-top: 10px;
 	color: var(--secondary-color);
 	font-size: 16px;
@@ -65,11 +65,11 @@
 	margin-top: 25px;
 }
 
-.page-footer {
+.page_footer {
 	position: block;
 }
 
-.page-footer::before {
+.page_footer::before {
 	content: "";
 	position: absolute;
 	left: 0;
@@ -78,12 +78,12 @@
 }
 
 @media (max-width: 1270px) {
-	.page-content:before,
-	.page-content:after {
+	.page_content:before,
+	.page_content:after {
 		width: calc((100% - 90%) / 2);
 	}
 
-	.content-wrapper {
+	.content_wrapper {
 		max-width: 90%;
 		padding-left: 10%;
 		padding-right: 10%;
@@ -91,25 +91,25 @@
 }
 
 @media (max-width: 1024px) {
-	.page-content:before,
-	.page-content:after {
+	.page_content:before,
+	.page_content:after {
 		width: calc((100% - 950px) / 2);
 	}
 
-	.content-wrapper {
+	.content_wrapper {
 		max-width: 980px;
 	}
 }
 
 @media (max-width: 800px) {
-	.content-wrapper {
+	.content_wrapper {
 		max-width: 90%;
 		margin: 0 auto;
 		padding: 0 10px;
 	}
 
-	.page-content:before,
-	.page-content:after {
+	.page_content:before,
+	.page_content:after {
 		display: none;
 	}
 
@@ -117,7 +117,7 @@
 		width: 100%;
 	}
 
-	.subtitle {
+	.sub {
 		width: 100%;
 	}
 }
