--- a/src/styles/ProjectCard.css
+++ b/src/styles/ProjectCard.css
@@ -7,12 +7,8 @@
 	height: 100%;
 }
 
-.project a {
-	text-decoration: none;
-}
-
 .project:hover {
-	background: #fafafa;
+	background: #a3a0a0;
 	opacity: 1;
 	transition: background-color 0.3s ease-in-out;
 }
@@ -25,7 +21,7 @@
 .project_container {
 	padding: 30px;
 	/* background: #f0c14b; */
-    border: 1px solid;
+    /* border: 1px solid; */
     /* margin-top: 10px; */
     /* border-color: #a88734 #9c7e31 #846a29; */
 	color: var(--primary-color);
