--- a/src/styles/ProjectPage.css
+++ b/src/styles/ProjectPage.css
@@ -1,22 +1,20 @@
-.project_main_container {
-	display: flex;
-	flex-wrap: wrap;
-	align-items: stretch;
-	padding-top: 30px;
-	padding-bottom: 30px;
-	margin-left: -35px;
-	margin-right: -35px;
-}
+@import './style.css';
 
 .projects_container {
-	width: calc(100% / 3);
-	box-sizing: border-box;
-	padding: 10px;
-	overflow: hidden;
+	display: flex;
+	flex-direction: column;
+    /* width: 50%; */
+	height: 100%;
+	margin: 0;
+	padding-top: 120px;
 }
 
 @media (max-width: 600px) {
 	.projects_container {
+		padding-top: 60px;
+	}
+
+	.projects_project {
 		width: calc(100% / 2);
 	}
 }
