--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -1,17 +1,3 @@
-/* .about_logo_container {
-	display: flex;
-	justify-content: left;
-	padding-top: 25px;
-}
-
-.about_logo {
-	display: flex;
-	position: fixed;
-	border: 1px solid white;
-	border-radius: 50%;
-	box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
-	top: 4vh;
-} */
 @import "./style.css";
 
 .about_container {
@@ -31,22 +17,21 @@
 }
 
 .about_title {
-	width: 85% !important;
+	width: 100% !important;
 }
 
 .about_sub {
-	width: 85% !important;
+	width: 80% !important;
 }
 
 .about_left_side {
 	display: flex;
 	flex-direction: column;
-	/* flex-basis: 300px; */
+	flex-basis: 300px;
 }
 
 .about_image_container {
-	width: 270px;
-    /* height: 200px; */
+	width: 370px;
 }
 
 .about_image_wrapper {
@@ -63,11 +48,7 @@
 }
 
 .about_socials {
-    /* display: flex;
-    justify-content: right;
-    align-items: center; */
-
-	padding-top: 50px;
+    padding-top: 50px;
 	padding-bottom: 50px;
 }
 
@@ -84,7 +65,7 @@
 		flex-direction: column;
 	}
 
-	.about_subtitle {
+	.about_sub {
 		padding-top: 20px !important;
 	}
 
