--- a/src/styles/ProjectCard.css
+++ b/src/styles/ProjectCard.css
@@ -20,13 +20,7 @@
 
 .project_container {
 	padding: 30px;
-	/* background: #f0c14b; */
-    /* border: 1px solid; */
-    /* margin-top: 10px; */
-    /* border-color: #a88734 #9c7e31 #846a29; */
-	color: var(--primary-color);
-
-
+	/* color: var(--primary-color); */
 }
 
 .project_image {
@@ -39,9 +33,7 @@
 
 .project_title {
 	font-family: var(--secondary-font);
-	/* font-family: sans-serif; */
 	color: var(--primary-color);
-	/* color: grey; */
 	font-size: 16px;
 	padding-top: 15px;
 	margin-bottom: 1em;
