--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -33,15 +33,15 @@
 .about_image_container {
 	/* width: 370px; */
 	padding-top: 10px;
-    width: 270px;
-	height: 270px;
+    width: 170px;
+	height: 170px;
 	padding-bottom: 100px;
 }
 
 .about_image_wrapper {
 	display: inline-block;
 	overflow: hidden;
-	width: 100%;
+	/* width: 100%; */
 	border-radius: 10%;
 	transform: rotate(3deg);
 }
@@ -109,8 +109,9 @@
 
 	.about_image_container {
 		padding-top: 50px;
-		padding-bottom: 30px;
-		width: 80%;
-		height: 80%;
+		padding-bottom: 100px;
+		margin-left: 10px;
+		/* width: 80%;
+		height: 80%; */
 	}
 }
