--- a/src/styles/ProjectPage.css
+++ b/src/styles/ProjectPage.css
@@ -5,7 +5,7 @@
 	flex-direction: column;
 	justify-content: space-around;
 	margin-top: 120px;
-    
+    padding-right: 0;
 }
 
 
@@ -16,6 +16,7 @@
 @media (max-width: 600px) {
 	.projects_container {
 		padding-top: 60px;
+		padding-right: 0;
 	}
 
 	.projects_project {
